--- a/erpSystem/src/main/webapp/resources/footer.css
+++ b/erpSystem/src/main/webapp/resources/footer.css
@@ -9,7 +9,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color : #439A97;
+  background-color : #51FFA6;
   padding: 20px;
   text-align: center;
 }
