--- a/erpSystem/src/main/webapp/resources/regist.css
+++ b/erpSystem/src/main/webapp/resources/regist.css
@@ -1,17 +1,31 @@
 @charset "UTF-8";
 
-section{
-	display : flex;
-	justify-content: center;
-}
+
 h1{
 	margin-top: 70px;
 	margin-bottom: 70px;
 	color: #51FFA6;
+	margin-left: 110px;
 }
 p{
-	color: #51FFA6;
+
 	font-size : 15px;
 	margin-top: 10px;
+}
+input{
+	width : 400px;
+	height : 30px;
+}
+select{
+	width : 100px;
 	margin-bottom: 10px;
+}
+
+.regist{
+	background-color: #51FFA6;
+	color: maroon; text-align : center;
+	text-decoration: none;
+	display: inline-block;
+	border-color: #DDFFBB;
+	text-align: center;
 }
