메인 페이지 업데이

--- a/erpSystem/src/main/webapp/resources/header.css
+++ b/erpSystem/src/main/webapp/resources/header.css
@@ -19,6 +19,8 @@
 	height: 30px;
 	width: 300px;
 	overflow: hidden;
+	
+	border : solid 1px rgb(27, 145, 81);
 }
 
 .search-box input[type="text"] {
@@ -49,14 +51,13 @@
 	border-bottom: solid 1px #32CD32;
 	
 	height:40px;
-	background-color:#DDFFBB;
+	background-color: white;
 	
   	display: flex;
   	flex-wrap: wrap;
   	justify-content: center;
   	align-items: center;
   	list-style: none;
-
 }
 
 .nav-list-main li {
@@ -68,11 +69,11 @@
   font-size: 16px;
   color: #577D86;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
 
 .nav-list-main li a:hover {
-  background-color: white;
+  background-color: #EFEFEF;
   color: #333 !important;
 }
