--- a/erpSystem/src/main/webapp/resources/main.css
+++ b/erpSystem/src/main/webapp/resources/main.css
@@ -13,38 +13,45 @@
 }
 
 .container {
-  grid-template-columns: 1fr 3fr;
-  grid-template-areas: "cate banner";
-}
-.category-list {
-	grid-area: cate;
-	overflow-y: auto;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	align-items: flex-start;
-	flex-direction: column;
-	width: 50%;
-	
-	background-color: rgb(132,132,132);
+	border-top: solid 2px #32CD32;
+	margin-top: 3px;
+	display:grid;
+  	grid-template-columns: 15% 85%;
+  	grid-template-areas: "cate banner";
+  	grid-column-gap: 1px;
+  	grid-row-gap: 4px;
 }
 
-#img{
+.category-list {
+	grid-area: cate;
+	display:flex;
+	flex-direction: column;
+	
+}
+
+#category-img{
 	width:100%;
 }
 
+#event-banner{
+	width:100%;	
+}
+
 .list {
-	
-	width: calc(50% - 10px);
+	width: 100%;
 	height: 30px;
-	margin: 5px;
+	padding: 5px 0;
 	
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: all 0.2s ease-in-out;
+	
+	background-color: rgb(132,132,132);
 }
 
 .list:hover{
-	background-color: green;
+	background-color: rgb(11,91,48);
 }
 
 .list>a{
@@ -52,9 +59,7 @@
 }
 
 .main-banner {
-	width : 50%;
   	grid-area: banner;
-  	object-fit: cover;
 }
 
 .footer {
