--- a/erpSystem/src/main/webapp/resources/footer.css
+++ b/erpSystem/src/main/webapp/resources/footer.css
@@ -6,10 +6,9 @@
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
   width: 100%;
-  background-color : #51FFA6;
-  padding: 20px;
+  background-color : #F7EDDB;
   text-align: center;
+  height: 80px;
+  line-height:80px;
 }
