--- a/erpSystem/src/main/webapp/resources/regist.css
+++ b/erpSystem/src/main/webapp/resources/regist.css
@@ -1,31 +1,69 @@
 @charset "UTF-8";
 
 
-h1{
-	margin-top: 70px;
-	margin-bottom: 70px;
-	color: #51FFA6;
-	margin-left: 110px;
-}
-p{
-
-	font-size : 15px;
-	margin-top: 10px;
-}
-input{
-	width : 400px;
-	height : 30px;
-}
-select{
-	width : 100px;
-	margin-bottom: 10px;
+.regist-box {
+	margin: 30px auto auto auto;
+	padding: 20px;
+	width: 60%;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
-.regist{
-	background-color: #51FFA6;
-	color: maroon; text-align : center;
-	text-decoration: none;
-	display: inline-block;
-	border-color: #DDFFBB;
+#info-title {
+	padding-bottom : 10px;
 	text-align: center;
+	color: #9DC08B;
+}
+
+.table {
+	margin: 0 auto;
+	border-collapse: collapse;
+	border-spacing: 10px
+}
+
+.table #td {
+	padding: 20px 20px;
+}
+
+.table #th {
+	padding: 10px;
+	text-align: left;
+	background-color: #CCD6A6;
+	color: #fff;
+	border: 1px solid #CCD6A6;
+}
+
+.table #th #td {
+	padding: 10px;
+	border: 1px solid #CCD6A6;
+}
+
+.table input[type=text],.table input[type=date],.table input[type=password] {
+	padding: 10px;
+	border: none;
+	border-bottom: 2px solid #f39c12;
+	width: 80%;
+	color: #34495e;
+}
+
+.button {
+	margin-top : 10px;
+	text-align: center;
+}
+
+.button input[type=button] {
+	background-color: #7D8F69;
+	border: none;
+	color: #fff;
+	padding: 10px 15px;
+	font-size: 16px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.button input[type=button]:hover {
+	background-color: #4E6C50;
+}
+
+input {
+	outline : none;
 }
