--- a/erpSystem/src/main/webapp/resources/board.css
+++ b/erpSystem/src/main/webapp/resources/board.css
@@ -1,107 +1,58 @@
 @charset "UTF-8";
 
-table {
-	border: 0;
-	border-spacing: 0;
-	border-collapse: collapse;
-}
-
-table {
-	width: 100%;
-	border-collapse: collapse;
-	border-spacing: 0;
-	table-layout: fixed;
-	word-wrap: break-word;
-	word-break: keep-all;
-}
-
-tr {
-	display: table-row;
-	vertical-align: inherit;
-	border-color: inherit;
-	border-top: 1px solid #006633;
-	border-bottom: 1px solid #e5e5e5;
-	border-spacing: 100px;
-}
-
-thead {
-	height: 40px;
-	background: #DDFFBB;
-}
-
-td, h1 {
-	text-align: center;
-}
-
-h1 {
-	margin-top: 70px;
-	margin-bottom: 70px;
-	color: #51FFA6;
-}
-
 .board {
-	width: 960px;
-	margin-left: 470px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position : relative;
+  min-height: 100vh;
+ 
 }
 
-.page {
-	padding-top: 32px;
-	height: 20px;
-	text-align: center;
-	line-height: 0;
-	vertical-align: top;
+table {
+  border-collapse: collapse;
+  width: 60%;
 }
 
-.title {
-	font-size: 14px;
-}
-.titles {
-	text-decoration: none;
-	color: black;
-}
-
-.main {
-	height: 500px;
+th, td {
+  text-align: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 8px;
 }
 
-.nav {
-	text-align: left;
-	font-size: 12px;
-	padding-left: 10px;
-}
-
-.click {
-	display: flex;
-	justify-content: flex-end;
-}
-
-input {
-	text-decoration: none;
+thead{
 	background-color: #51FFA6;
-	color: maroon;
-	padding: 10px 15px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	padding-bottom: 10px;
-	border-color: #DDFFBB;
+}
+
+.titles {
+  text-decoration: none;
+  color: black;
+}
+
+.page a {
+  margin-right: 10px;
 }
 
 .write {
-	
-	text-decoration: none;
-	background-color: #51FFA6;
-	color: maroon;
-	padding: 10px 15px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	padding-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #51FFA6;
+  color: black;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
 }
-.notice-header{
-	display: flex;
-	justify-content: flex-end;
+
+.write:hover {
+  background-color: #9EF048	;
+  color : white;
 }
 a:hover{
 	text-decoration: underline;
+}
+.notice-header {
+  margin-top : 10px;
+
 }
