--- a/erpSystem/src/main/webapp/resources/orderConfirm.css
+++ b/erpSystem/src/main/webapp/resources/orderConfirm.css
@@ -1,51 +1,36 @@
-@charset "UTF-8";
 
-table {
-	border: 0;
-	border-spacing: 0;
-	border-collapse: collapse;
-}
-
-table {
-	
-	width: 100%;
-	border-collapse: collapse;
-	border-spacing: 0;
-	table-layout: fixed;
-	word-wrap: break-word;
-	word-break: keep-all;
-}
-
-tr {
-	display: table-row;
-	vertical-align: inherit;
-	border-color: inherit;
-	border-top: 1px solid #006633;
-	border-bottom: 1px solid #e5e5e5;
-	border-spacing: 100px;
-}
-
-thead {
-	height: 40px;
-	background: #DDFFBB;
-	
-}
-
-td, h1 {
-	text-align: center;
-}
-
-h1 {
-	margin-top: 70px;
-	margin-bottom: 70px;
-	color: #51FFA6;
-}
-
-.board {
-	width: 960px;
-	margin-left: 470px;
-}
 a:hover {
 	text-decoration: underline;
 	cursor: pointer;
+}
+a{
+	text-decoration : none;
+}
+
+
+.board {
+  max-width: 960px; 
+  margin: 0 auto; 
+}
+
+.board h1 {
+  text-align: center; 
+}
+
+.board table {
+  width: 100%; 
+  border-collapse: collapse; 
+}
+
+.board td {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc; 
+  padding: 10px; 
+  text-align: center; 
+}
+thead{
+	background-color: #51FFA6;
+}
+.number {
+  margin : 0 auto;
 }
