--- a/erpSystem/src/main/webapp/resources/adminpage.css
+++ b/erpSystem/src/main/webapp/resources/adminpage.css
@@ -3,7 +3,6 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f5f5f5;
 }
 
 /* 버튼 컨테이너 */
@@ -11,31 +10,32 @@
   margin-bottom: 20px;
 }
 
-/* 버튼 */
+
 .button-container button {
-  background-color: #4caf50;
+  background-color: #FF82FF;
   color: #fff;
   border: none;
   padding: 10px 20px;
   margin-right: 10px;
   cursor: pointer;
   font-size: 16px;
+  border-radius: 5px;
 }
 
-/* 선택된 버튼 스타일 */
+
 .button-container button.active {
-  background-color: #007bff;
+  background-color: #FFB6C1	;
 }
 
-/* 그래프 컨테이너 */
+
 #column_chart_div1 {
   margin-bottom: 20px;
 }
 
-/* 링크 */
+
 .sales {
   display: inline-block;
-  background-color: #007bff;
+  background-color: #FF82FF;
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
@@ -44,5 +44,5 @@
 }
 
 a:hover {
-  background-color: #0069d9;
+  background-color: #FFB6C1	;
 }
