--- a/erpSystem/src/main/webapp/resources/boardWrite.css
+++ b/erpSystem/src/main/webapp/resources/boardWrite.css
@@ -7,7 +7,7 @@ td, h1 {
 h1 {
 	margin-top: 70px;
 	margin-bottom: 70px;
-	color: #51FFA6;
+	color : #395144;
 }
 
 .write {
@@ -30,13 +30,21 @@ h1 {
 .button {
 	width: 165px;
 	height: 30px;
-	background-color: #51FFA6;
-	color: maroon; text-align : center;
+	background-color: rgb(240, 246, 244);
+	color: #395144;
+	text-align : center;
 	text-decoration: none;
 	display: inline-block;
-	border-color: #DDFFBB;
+	border-color: rgb(240, 246, 244);
 	text-align: center;
 	margin-left: 500px; 
+	border-radius: 10px;
+}
+.button:hover{
+	
+	background-color: #395144;
+	color: rgb(240, 246, 244);
+	
 }
 
 tr {
