--- a/erpSystem/src/main/webapp/resources/regist.css
+++ b/erpSystem/src/main/webapp/resources/regist.css
@@ -2,14 +2,13 @@
 
 
 .regist-box {
-	margin: 30px auto auto auto;
+	margin: 10px auto auto auto;
 	padding: 20px;
 	width: 60%;
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 #info-title {
-	padding-bottom : 10px;
+	padding-bottom : 30px;
 	text-align: center;
 	color: #9DC08B;
 }
@@ -17,7 +16,7 @@
 .table {
 	margin: 0 auto;
 	border-collapse: collapse;
-	border-spacing: 10px
+	border-spacing: 10px;
 }
 
 .table #td {
@@ -41,7 +40,7 @@
 	padding: 10px;
 	border: none;
 	border-bottom: 2px solid #f39c12;
-	width: 80%;
+	width: 100%;
 	color: #34495e;
 }
 
