--- a/erpSystem/src/main/webapp/resources/main.css
+++ b/erpSystem/src/main/webapp/resources/main.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 *{
 	margin:0;
 	padding:0;
-	font-family: sans-serif;
+	font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 	text-decoration:none;
 }
 
