mypage/order/regist

--- a/erpSystem/src/main/webapp/resources/order.css
+++ b/erpSystem/src/main/webapp/resources/order.css
@@ -1,71 +1,84 @@
-section{
-	width : 60%;
-	margin : auto;
+.order {
+	width: 60%;
+	margin: auto;
 }
 
-table {
-  margin: 20px;
-  border-collapse: collapse;
-  width: 100%;
+.tbl {
+	margin: 20px;
+	border-collapse: collapse;
+	width: 100%;
 }
 
 td {
-	padding : 15px;
-  text-align: center;
-  
-}
-
-tr{
-	border-bottom: 1px solid #ddd;
-}
-
-h3 {
-  margin: 20px;
-  text-align: center;
-  font-size: 24px;
-}
-
-p {
-  margin: 20px;
-  text-align: center;
-  font-size: 18px;
-}
-
-button {
-  background-color: rgb(240,246,244);
-  color: #395144;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #395144;
-  color: rgb(240,246,244);
-}
-
-p {
-  color: #395144;
-  font-weight: bold;
-}
-.total{
-	text-align: right;
+	padding: 15px;
+	text-align: center;
 	
 }
-form{
-	text-align: right;
-	margin-top: 10px;
+
+.orderhead {
+	border-top: 2px solid #395144;
+	background-color: rgb(240, 246, 244);
 }
-.button{
+
+tr {
+	border-bottom: 1px solid #395144;
+}
+
+.titles {
+	margin: 20px;
+	text-align: center;
+	font-size: 24px;
+}
+
+.total {
+	margin: 20px;
+	text-align: center;
+	font-size: 18px;
+}
+
+.drop {
+	background-color: rgb(240, 246, 244);
+	color: #395144;
+	border: none;
+	padding: 5px 10px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.drop:hover {
 	background-color: #395144;
-  color: rgb(240,246,244);
-  border: none;
-  padding: 15px 15px;
-  border-radius: 5px;
-  cursor: pointer;
+	color: rgb(240, 246, 244);
 }
+
+.tung {
+	color: #395144;
+	font-weight: bold;
+	text-align: center;
+}
+
+.total {
+	text-align: right;
+}
+
+.ord {
+	margin-top: 10px;
+	text-align: right;
+}
+
+.button {
+	background-color: #395144;
+	color: rgb(240, 246, 244);
+	border: none;
+	padding: 15px 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	
+}
+
 .button:hover {
-  background-color: rgb(240,246,244);
-  color: #395144;
+	background-color: rgb(240, 246, 244);
+	color: #395144;
+}
+.but{
+	text-align : right;
 }
