--- a/erpSystem/src/main/webapp/resources/adminpage.css
+++ b/erpSystem/src/main/webapp/resources/adminpage.css
@@ -14,8 +14,8 @@
 
 
 .button-container button {
-  background-color: #FF82FF;
-  color: #fff;
+  background-color: rgb(240,246,244);
+  color: black;
   border: none;
   padding: 10px 20px;
   margin-right: 10px;
@@ -26,7 +26,7 @@
 
 
 .button-container button.active {
-  background-color: #FFB6C1	;
+  background-color: rgb(240,246,244);
 }
 
 
@@ -37,8 +37,8 @@
 
 .sales {
   display: inline-block;
-  background-color: #FF82FF;
-  color: #fff;
+  background-color: rgb(240,246,244);
+  color: #395144;
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
@@ -46,8 +46,10 @@
 }
 
 a:hover {
-  background-color: #FFB6C1	;
+  background-color: #395144;
+  color : rgb(240,246,244);
 }
 button:hover{
-	background-color: #FFB6C1	;
+	background-color: #395144;
+	color :rgb(240,246,244);
 }
