--- a/erpSystem/src/main/webapp/resources/mypage.css
+++ b/erpSystem/src/main/webapp/resources/mypage.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.container {
+.container1 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
@@ -63,7 +63,6 @@ text-align: center;
   display: grid;
   grid-template-columns: 25% 60% 15%;
   gap: 10px;
-  margin-top: 10px;
   background-color: #f0f0f0;
   font-weight: bold;
 }
