--- a/erpSystem/src/main/webapp/resources/header.css
+++ b/erpSystem/src/main/webapp/resources/header.css
@@ -70,6 +70,7 @@
   padding: 10px 20px;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .nav-list-main li a:hover {
