--- a/erpSystem/src/main/webapp/resources/dropCustomer.css
+++ b/erpSystem/src/main/webapp/resources/dropCustomer.css
@@ -7,11 +7,9 @@
 
 .login {
 	background-color: #fff;
-	border: 2px solid #CCD6A6;
 	padding: 20px;
 	width: 400px;
 	margin: 0 auto;
-	box-shadow: 0 0 10px #CCD6A6;
 	margin-top : 50px;
 	margin-bottom : 50px;
 }
@@ -43,4 +41,7 @@
 
 .login input[type="button"]:hover {
 	background-color: #CCD6A6;
+}
+.drop{
+	text-align : center;
 }
