--- a/erpSystem/src/main/webapp/resources/productList.css
+++ b/erpSystem/src/main/webapp/resources/productList.css
@@ -9,24 +9,27 @@
 
 #name {
 	align-content: center;
+	margin-bottom : 20px;
 }
 
 .product-list {
 	display: flex;
 	flex-wrap: wrap;
 	margin-top: 50px;
-	justify-content: space-evenly
-	
-}
+	justify-content: space-evenly;
 
-.card {
+}
+.cards{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	border: 1px solid gray;
+}
+.card {
+	
+	border: 2px solid rgb(240,246,244);
 	padding: 10px;
 	width: 200px;
-	height: 300px;
+	height: 180px;
 	cursor: pointer;
 }
 
@@ -36,11 +39,19 @@
 	object-fit: contain;
 	margin-bottom: 10px;
 }
-
-.card h3 {
-	margin: 0;
+.inform{
+	margin-bottom: 20px;
+	text-align : center;
+	font-size : 13px;
+}
+.product{
+	text-decoration: none;
+	color : black;
 }
 
-.card p {
-	margin: 5px 0;
+
+.lists{
+	display : grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	width : 100%;
 }
