--- a/erpSystem/src/main/webapp/resources/mypage.css
+++ b/erpSystem/src/main/webapp/resources/mypage.css
@@ -1,73 +1,108 @@
 @charset "UTF-8";
 
+* {
+	padding: 0;
+	margin: 0;
+}
+
+ul {
+	list-style: none;
+}
+
 .container1 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+	width: 90%;
+	justify-items: center;
+	align-items: center;
 }
 
 .cust_info {
-  grid-column: 1 / span 2;
+	width: 50%;
+	padding: 10px;
+	border: 2px solid #ccc;
+	margin: 10px;
+}
+
+.cust_info ul li {
+	padding: 5px 0;
+}
+
+.pagename {
+	border-bottom: 2px solid #ccc;
+	width: 100%;
+	margin: 10px;
 }
 
 .my-order {
-  grid-column: 1;
+	width: 100%;
+	border-bottom: 2px solid #ccc;
+	border-top: 2px solid #ccc;
+	margin-bottom: 10px;
+	margin-left: 10px;
+}
+
+.my-order table {
+	table-layout: fixed;
+	width: 100%;
+	text-align: center;
+}
+
+.my-order table tr td {
+	padding: 5px 0;
 }
 
 .my-board {
-  grid-column: 2;
+	width: 100%;
+	border-bottom: 2px solid #ccc;
+	border-top: 2px solid #ccc;
+	margin-bottom: 10px;
+	margin-left: 10px;
 }
 
-.button {
-  grid-column: 1 / span 2;
-  text-align: center;
+.my-board table tr td {
+	padding: 5px 0;
 }
 
-.order-thead {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 1fr;
-  background-color: #f0f0f0;
-  font-weight: bold;
+.my-board table {
+	table-layout: fixed;
+	width: 100%;
+	text-align: center;
 }
 
-.order-thead div {
-  padding: 10px;
-  text-align: center;
-  border-right: 1px solid black;
+.thead {
+	background-color: #ccc;
+	width: 100%
 }
 
-.order-thead div:last-child {
-  border-right: none;
+h5 {
+	margin-left: 10px;
+}
+
+.button-container {
+	margin-top : 20px;
+	text-align : right;
+}
+
+.button-container .button {
+  background-color: rgb(240,246,244);
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
 }
 
 
-.order-tbody {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  gap: 10px;
-  margin-top: 10px;
+
+.button-container button.active {
+  background-color: rgb(240,246,244);
 }
 
-.my-board {
-display: grid;
-grid-template-columns: 25% 60% 15%;
+.button:hover{
+	background-color: #395144;
+	color :rgb(240,246,244);
 }
 
-.board-thead div {
-padding: 10px;
-text-align: center;
-}
 
-.board-thead {
-  display: grid;
-  grid-template-columns: 25% 60% 15%;
-  gap: 10px;
-  background-color: #f0f0f0;
-  font-weight: bold;
-}
 
-.board-thead div {
-  padding: 10px;
-  text-align: center;
-}
