--- a/erpSystem/src/main/webapp/resources/main.css
+++ b/erpSystem/src/main/webapp/resources/main.css
@@ -49,7 +49,7 @@
 	align-items: center;
 	transition: all 0.2s ease-in-out;
 	
-	background-color: rgb(132,132,132);
+	background-color: #C4C4C4;
 }
 
 .list:hover{
