Fix a bug : addCart and update stocks

--- a/erpSystem/src/main/webapp/resources/adminpage.css
+++ b/erpSystem/src/main/webapp/resources/adminpage.css
@@ -1,55 +1,57 @@
 .button-container {
-
-  margin-bottom: 20px;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 20px;
-  
+	margin-bottom: 20px;
+	max-width: 900px;
+	margin: 0 auto;
+	padding: 20px;
 }
 
-#btn, #btn2{
-	margin-bottom : 20px;
+.drawbox {
+	width: 900px;
+	height: 500px;
+	border: 1px solid #ccc;
+	margin: 0 auto;
+	text-align: center;
 }
 
+#btn, #btn2 {
+	margin-bottom: 20px;
+}
+
+.admin-container {
+	text-align: center;
+}
 
 .button-container button {
-  background-color: rgb(240,246,244);
-  color: black;
-  border: none;
-  padding: 10px 20px;
-  margin-right: 10px;
-  cursor: pointer;
-  font-size: 16px;
-  border-radius: 5px;
+	background-color: rgb(240, 246, 244);
+	color: black;
+	border: none;
+	padding: 10px 20px;
+	margin-right: 10px;
+	cursor: pointer;
+	font-size: 16px;
+	border-radius: 5px;
 }
-
 
 .button-container button.active {
-  background-color: rgb(240,246,244);
+	background-color: rgb(240, 246, 244);
 }
-
-
-#column_chart_div1 {
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-}
-
 
 .sales {
-  display: inline-block;
-  background-color: rgb(240,246,244);
-  color: #395144;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-decoration: none;
-  font-size: 16px;
+	display: inline-block;
+	background-color: rgb(240, 246, 244);
+	color: #395144;
+	padding: 10px 20px;
+	border-radius: 5px;
+	text-decoration: none;
+	font-size: 16px;
 }
 
 a:hover {
-  background-color: #395144;
-  color : rgb(240,246,244);
-}
-button:hover{
 	background-color: #395144;
-	color :rgb(240,246,244);
+	color: rgb(240, 246, 244);
+}
+
+button:hover {
+	background-color: #395144;
+	color: rgb(240, 246, 244);
 }
