--- a/erpSystem/src/main/webapp/resources/header.css
+++ b/erpSystem/src/main/webapp/resources/header.css
@@ -1,12 +1,19 @@
 @charset "UTF-8";
 
+.header {
+	display: flex;
+	margin-top: 0.5px;
+}
 
-.header { display: flex; margin-top:0.5px;}
+.banner {
+	margin: 0 1px;
+	width: 100%;
+}
 
-.banner{ margin: 0 1px; width: 100%; }
-
-.banner img { width: 100%; height: 140px;}
-
+.banner img {
+	width: 100%;
+	height: 140px;
+}
 
 .search-box {
 	display: flex;
@@ -18,8 +25,7 @@
 	height: 30px;
 	width: 300px;
 	overflow: hidden;
-	
-	border : solid 1px rgb(27, 145, 81);
+	border: solid 1px rgb(27, 145, 81);
 }
 
 .search-box input[type="text"] {
@@ -42,38 +48,33 @@
 	padding: 0px 5px;
 }
 
-
-
 .nav-list-main {
-	
-	border-top : solid 2px #62cd23;
+	border-top: solid 2px #62cd23;
 	border-bottom: solid 1px #32CD32;
-	
-	height:40px;
+	height: 50px;
 	background-color: white;
-	
-  	display: flex;
-  	flex-wrap: wrap;
-  	justify-content: center;
-  	align-items: center;
-  	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	list-style: none;
 }
 
 .nav-list-main li {
-  text-align: center;
+	text-align: center;
 }
 
 .nav-list-main li a {
-  text-decoration: none;
-  font-size: 16px;
-  color: #577D86;
-  padding: 10px 20px;
-  border-radius: 4px;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
+	text-decoration: none;
+	font-size: 16px;
+	color: #577D86;
+	padding: 10px 20px;
+	border-radius: 4px;
+	transition: all 0.2s ease-in-out;
+	cursor: pointer;
 }
 
 .nav-list-main li a:hover {
-  background-color: #EFEFEF;
-  color: #333 !important;
+	background-color: #EFEFEF;
+	color: #333 !important;
 }
